RESOLVED FIXED292947
[HDR] Images inside an iframe will not be detected for HDRness unless the iframe is composited
https://bugs.webkit.org/show_bug.cgi?id=292947
Summary [HDR] Images inside an iframe will not be detected for HDRness unless the ifr...
Said Abou-Hallawa
Reported 2025-05-13 12:38:00 PDT
Created attachment 475217 [details] test-hdr-inside-iframe 1. Enable Support HDR Display 2. Open the attached test case Result: The first iframe shows HDR contents for its image. The second iframe shows its image as SDR. Expected: Both iframes should show HDR contents for their images Note: The first iframe is scrollable which means its layer are composited. But the second iframe is not scrollable.
Attachments
test-hdr-inside-iframe (308 bytes, text/html)
2025-05-13 12:38 PDT, Said Abou-Hallawa
no flags
Radar WebKit Bug Importer
Comment 1 2025-05-13 12:38:09 PDT
Simon Fraser (smfr)
Comment 2 2025-06-12 17:35:13 PDT
EWS
Comment 3 2025-06-17 08:49:24 PDT
Committed 296315@main (1915654207cc): <https://commits.webkit.org/296315@main> Reviewed commits have been landed. Closing PR #46686 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.